test/bad/expected-symbol-parameter.fnl
(fn aöén [a 1 b] b)
